# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
assets/objects/elysia/: elysia.fbx
configuration/: root_directory.h.in
include/: LearnOpenGL.h  camera.h  filesystem.h  helloCamera.h  helloCoordinate.h  helloLight.h  helloLightTexture.h  helloMaterial.h  helloRealLight.h  helloShader.h  helloTexture.h  helloTransform.h  helloTriangle.h  renderable.h  shader.h  utils.h
include/glad/: glad.h
include/learnopengl/: camera.h  cameraRenderable.h  mesh.h  model.h  renderable.h  shader.h  utils.h
include/learnopengl/advanced/: antiAliasing.h  blending.h  cubemap.h  cullFace.h  framebuffer.h  galaxy.h  geometry.h  instanceQuad.h  normalVisualization.h  stencilTest.h  ubo.h
include/learnopengl/advancedLighting/: blinnPhong.h  blurGamma.h  gamma.h  shadowMapping.h
include/learnopengl/basic/: helloCamera.h  helloCoordinate.h  helloShader.h  helloTexture.h  helloTransform.h  helloTriangle.h
include/learnopengl/light/: helloLight.h  helloLightTexture.h  helloMaterial.h  helloRealLight.h  multipleLights.h
include/learnopengl/modelLoad/: modelLoad.h
libs/: assimp.lib
shaders/: helloCamera.fs  helloCoordinate.vs  helloTexture.fs  helloTexture.vs  helloTransform.fs  helloTransform.vs  light.fs
shaders/advanced/blending/: object.fs
shaders/advanced/cubemap/: object.fs  object.vs  skybox.fs  skybox.vs
shaders/advanced/cullFace/: normal.fs  normal.gs  normal.vs
shaders/advanced/frameBuffer/: screen.fs
shaders/advanced/galaxy/: planet.fs  planet.vs  rock.vs
shaders/advanced/geometry/: object.gs  object.vs
shaders/advanced/instanceQuad/: object.vs
shaders/advanced/normalVisualization/: normal.fs  normal.gs  normal.vs  object.fs  object.gs  object.vs
shaders/advanced/polyhedron/: object.fs  object.gs
shaders/advanced/stencilTest/: border.fs  object.fs  object.vs
shaders/advanced/ubo/: object.vs
shaders/advancedLighting/: object.fs  object.vs
shaders/advancedLighting/blinnPhong/: object.fs
shaders/advancedLighting/blurGamma/: object.fs  object.vs  screen.fs
shaders/advancedLighting/gamma/: object.fs
shaders/advancedLighting/shadow/: depth.vs  object.fs  object.vs
shaders/gamma/: object.fs
shaders/light/: object.fs  object.vs
shaders/lightTexture/: object.fs  object.vs
shaders/material/: object.fs
shaders/modelLoad/: object.fs  object.vs
shaders/multipleLights/: lightSource.fs  object.fs  object.vs
shaders/realLight/: lightSource.vs  object.fs
src/: LearnOpenGL.cpp  glad.c  helloCamera.cpp  helloCoordinate.cpp  helloLight.cpp  helloLightTexture.cpp  helloMaterial.cpp  helloRealLight.cpp  helloShader.cpp  helloTexture.cpp  helloTransform.cpp  helloTriangle.cpp  utils.cpp
src/advanced/: antiAliasing.cpp  blending.cpp  cubemap.cpp  cullFace.cpp  frameBuffer.cpp  galaxy.cpp  geometry.cpp  instanceQuad.cpp  normalVisualization.cpp  stencilTest.cpp  ubo.cpp
src/advancedLighting/: blinnPhong.cpp  blurGamma.cpp  gamma.cpp  shadowMapping.cpp
src/basic/: helloCamera.cpp  helloCoordinate.cpp  helloShader.cpp  helloTexture.cpp  helloTransform.cpp  helloTriangle.cpp
src/light/: helloLight.cpp  helloLightTexture.cpp  helloMaterial.cpp  helloRealLight.cpp  multipleLights.cpp
src/modelLoad/: modelLoad.cpp
